# weather-station

./: .gitmodules  README.md
Gateway/: .gitignore
Gateway/home-assistant/conf/: .gitkeep
Gateway/mosquitto/conf/: mosquitto.conf
Gateway/proxy/: .gitignore  Cargo.toml
Gateway/proxy/conf/: config.yaml
Gateway/proxy/src/: config.rs  data.rs  error.rs  home_assistant.rs  main.rs  proxy.rs  radio.rs  util.rs  vutbr.rs
HW/Node/: with_solar.brd  with_solar.sch  with_solar_universal.brd  with_solar_universal.sch  without_solar.brd  without_solar.sch
Node/: .gdbinit  README.md  rules.mk
Node/lib/: bme280.c  rfm69.c
Node/lib/include/: bme280.h  config.h  rfm69.h  rfm69_defs.h
Node/lib/include/periph/: adc.h  gpio.h  i2c.h  low_power.h  rtc.h  spi.h  sys_tick.h  usart.h
Node/lib/periph/: adc.c  gpio.c  i2c.c  low_power.c  rtc.c  spi.c  sys_tick.c  usart.c
Node/node/: Makefile  main.c
Node/weather-station/: Makefile  main.c
docker/: Dockerfile.node  Dockerfile.proxy
scripts/: run-build-node.sh  run-gateway-containers.sh
