[package]
name = "proxy"
version = "0.1.0"
authors = ["Ales Musil <aedvin1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = { git = "https://github.com/rust-embedded/linux-embedded-hal", branch = "master" }
rfm69 = { git = "https://github.com/almusil/rfm69", branch = "master"}

async-std =  { version = "1.5", features = ["unstable", "attributes"] }
ctrlc = { version = "3.1", features = ["termination"] }
futures = { version = "0.3", features = ["compat"] }
paho-mqtt = { version = "0.6", features = ["build_bindgen"] }
serde = { version = "1.0", features = ["derive"] }

bincode = "1.2"
failure = "0.1"
log = "0.4"
serde_json = "1.0"
serde_yaml = "0.8"
simplelog = "0.7"

[[bin]]
name = "proxy"
path = "src/main.rs"
